# nepeval

./: .gitignore  README.md  pyproject.toml
data/indicifeval_ne/: all.jsonl  manifest.json
data/indicifeval_ne/indicifeval-ground/: ne.jsonl
data/indicifeval_ne/indicifeval-trans/: ne.jsonl
lm_eval_tasks/: README.md
lm_eval_tasks/indicifeval-ground/: indicifeval_ne.yaml  instructions_registry.py
lm_eval_tasks/indicifeval-ground/instructions/: ne_instructions.py
lm_eval_tasks/indicifeval-trans/: indicifeval_ne.yaml  utils.py
lm_eval_tasks/indicifeval-trans/instructions/: ne_instructions.py
results/himalayagpt/: 20260610T152333Z_quantization_comparison.json  20260610T152333Z_quantization_comparison.md  20260610T164913Z_quantization_comparison.json  20260610T164913Z_quantization_comparison.md
results/himalayagpt/20260610T152333Z_bf16/: run_config.json  summary.json  summary.md
results/himalayagpt/20260610T152333Z_bf16/models/himalaya-bf16/: progress.json  samples.jsonl  (+1 more)
results/himalayagpt/20260610T152333Z_q4/: run_config.json  summary.json  summary.md
results/himalayagpt/20260610T152333Z_q8/: run_config.json  summary.json  summary.md
results/himalayagpt/20260610T164913Z_bf16/: run_config.json  summary.json  summary.md
results/himalayagpt/20260610T164913Z_q4/: run_config.json  summary.json  summary.md
results/himalayagpt/20260610T164913Z_q8/: run_config.json  summary.json  summary.md
scripts/: materialize_nepali_indicifeval.py  run_nepali_indicifeval_lm_eval.sh  run_openai_compatible_api_benchmarks.py  summarize_quantization_results.py
(+15 files in other folders)
